package prenda;

public enum Categoria {
    PARTE_SUPERIOR,
    PARTE_INFERIOR,
    ACCESORIOS,
    CALZADO
}
