package prenda;

public enum Material {
    ALGODON, JEAN, LINO, GABARDINA, SEDA, CUERO, PLASTICO,
    ORO, CUERINA, PLATA, LONA, LANA, POLIESTER, ACRILICO, CORDEROY, BENGALINA
}
